--- a/index2.html
+++ b/index2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my shelly coooper</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
     <div>
-        <h3>My second website</h3>
-    </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias iste assumenda obcaecati repellat tempora accusamus fugit corrupti, cupiditate placeat magnam neque consectetur ducimus odit nulla, adipisci ea a possimus?</p>
+        <h3 >My second website</h3>
     
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias iste assumenda obcaecati repellat tempora accusamus fugit corrupti, cupiditate placeat magnam neque consectetur ducimus odit nulla, adipisci ea a possimus?</p>
+</div>
 </body>
 </html>
